--- a/app/src/main/res/layout/activity_pick_from_contacts.xml
+++ b/app/src/main/res/layout/activity_pick_from_contacts.xml
@@ -7,13 +7,11 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    tools:context="com.aurum.activities.FingerprintActivity">
+    tools:context="com.aurum.activities.PickFromContacts">
 
-    <ImageView
-        android:id="@+id/img_finger_print"
+    <EditText
+        android:id="@+id/txt_contact"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/fingerprint" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
