--- a/app/src/main/res/layout/welcome_slide1.xml
+++ b/app/src/main/res/layout/welcome_slide1.xml
@@ -9,18 +9,12 @@
         android:layout_height="match_parent"
         android:background="@color/transparent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="right"
-            android:padding="16dp">
-            <android.support.design.widget.FloatingActionButton
+        <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:layout_gravity="right|bottom" />
-        </LinearLayout>
+                android:text="Hello from"
+                android:textSize="26dp"
+                android:textColor="#fff" />
 
     </FrameLayout>
 
