--- a/app/src/main/res/layout/welcome_slide2.xml
+++ b/app/src/main/res/layout/welcome_slide2.xml
@@ -9,18 +9,13 @@
         android:layout_height="match_parent"
         android:background="@color/transparent">
 
-        <LinearLayout
+
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="right"
-            android:padding="16dp">
-            <android.support.design.widget.FloatingActionButton
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:layout_gravity="right|bottom" />
-        </LinearLayout>
+            android:layout_height="wrap_content"
+            android:text="Hello from Slide 2"
+            android:textSize="26dp"
+            android:textColor="#fff" />
 
     </FrameLayout>
 
